Hopefully fixed the horizontal scrolling for mobile in safari and chrome.

--- a/main.css
+++ b/main.css
@@ -74,13 +74,9 @@ h4 {
     justify-content: center;
 }
 
-.screenshot {
-    height: 300px;
-}
-
 .icons *{
     width: 13%;
-    height: 50px;
+    height: 40px;
     padding: 5;
     margin: 0;
     background-color: white;
@@ -93,7 +89,7 @@ h4 {
 }
 
 .project-info li {
-    padding: 0 0 10px 5px;
+    padding: 0 15px 10px 15px;
 }
 
 .pic-space {
@@ -161,7 +157,6 @@ h1 {
     }
 
     .icons * { 
-        width: 5%;
         height: 25px;
     }
 
@@ -211,7 +206,7 @@ h1 {
     }
 
     .icons * {
-        width: 7%;
+        width: 3%;
     }
 
     .contact-info {
